reintegrate examples as tests